fixed overlapping bug

--- a/src/os2datascanner/projects/report/reportapp/static/src/css/components/_banner.scss
+++ b/src/os2datascanner/projects/report/reportapp/static/src/css/components/_banner.scss
@@ -6,7 +6,7 @@
   line-height: 1;
   position: sticky;
   top: var(--size-ds-unit);
-  z-index: 1;
+  z-index: 99;
 }
 
 .banner .logo {
